# ETT_OrgChat

./: .gitignore
client/: package-lock.json  package.json
client/app/: layout.tsx
server/: iic_auth.db  main.py  pyproject.toml
server/app/core/: auth.py  config.py  database.py
server/app/database/: database.py
server/app/models/: chat_models.py
server/app/rag/: __init__.py  multi_agent_rag.py  rag.py  rag_chromadb.py  simplified_multi_agent_rag.py
server/app/routes/: chat_routes.py
