[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "sentence-transformers>=5.3.0",
    "uvicorn[standard]>=0.34.0",
    "crewai>=0.80.0",
    "pypdf>=3.0.0",
    "litellm>=1.0.0",
]
